[tool.poetry]
name = "users-api"
version = "0.1.1"
description = ""
authors = ["kozlovmv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
users-core = {git = "https://github.com/kozlovmvl/users-core.git"}
users-store = {git = "https://github.com/kozlovmvl/users-store.git"}
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
litestar = "^2.15.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
pre-commit = "^4.2.0"
pytest-mock = "^3.14.0"
uvicorn = "^0.34.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.ruff]
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
